--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
-<!--A Design by W3layouts
-  Author: W3layout
-  Author URL: http://w3layouts.com
-  License: Creative Commons Attribution 3.0 Unported
-  License URL: http://creativecommons.org/licenses/by/3.0/
-  -->
+
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <title>Gym-plus a Sports Category Category Bootstrap Responsive web Template| Home :: w3layouts</title>
+    <title>Action Plus</title>
     <!--meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -48,7 +43,7 @@
           <!--//navigation section -->
           <nav class="navbar navbar-expand-lg navbar-light">
             <div class="hedder-up " >
-              <h1><a class="navbar-brand" href="index.html" data-aos="fade-right">Gym-Plus</a></h1>
+              <h1><a class="navbar-brand" href="index.html" data-aos="fade-right">Action-Plus</a></h1>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -137,10 +132,10 @@
           <div class="col-lg-7 jst-about py-lg-5 pt-md-5 pt-sm-4 pt-3" data-aos="fade-right">
             <h2 class="mb-lg-5 mb-lg-4 mb-3">Fitness And Health</h2>
             <div class="agile-about-para">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+              <p>Add Your Text Of Choice</p>
             </div>
             <div class="mt-lg-3 mt-2 agile-about-para">
-              <p>incididunt ut labore et Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+              <p>Add Your Text Of Choice</p>
             </div>
           </div>
           <div class="col-lg-5 about-States-list" data-aos="fade-left">
@@ -159,7 +154,7 @@
             data-aos-offset="250"
             data-aos-easing="ease-in-sine">
             <h4 class="mb-lg-4 mb-3"> Body Builder Classes</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt Lorem ipsum dolor sit amet</p>
+            <p>Add Your Text Of Choice</p>
             <div class="mt-3 outs_more-buttn">
               <a href="#" data-toggle="modal" data-target="#exampleModalLive">Read More</a>
             </div>
@@ -180,7 +175,7 @@
             data-aos-offset="200"
             data-aos-easing="ease-in-sine">
             <h4 class="mb-lg-4 mb-3">Weight Loss Classes</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt Lorem ipsum dolor sit amet</p>
+            <p>Add Your Text Of Choice</p>
             <div class="mt-3 outs_more-buttn">
               <a href="#" data-toggle="modal" data-target="#exampleModalLive">Read More</a>
             </div>
@@ -191,7 +186,7 @@
             data-aos-offset="150"
             data-aos-easing="ease-in-sine">
             <h4 class="mb-lg-4 mb-3">Indoor Cycling Classes</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt Lorem ipsum dolor sit ametLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt Lorem ipsum dolor sit amet,</p>
+            <p>Add Your Text Of Choice</p>
             <div class="mt-3 outs_more-buttn">
               <a href="#" data-toggle="modal" data-target="#exampleModalLive">Read More</a>
             </div>
@@ -206,115 +201,7 @@
     </section>
     <!--//service-->
     <!--clients-->
-    <section class="client py-lg-4 py-md-3 py-sm-3 py-3" id="client">
-      <div class="container py-lg-5 py-md-5 py-sm-4 py-3">
-        <h3 class="title text-center mb-lg-5 mb-md-4 mb-sm-4 mb-3">Our Clients</h3>
-        <div class="flexslider">
-          <ul class="slides">
-            <li>
-              <div class="row client-slider-slide">
-                <div class="col-lg-6 col-md-6 w3layouts-txt-says">
-                  <div class="clients-color-agile text-center">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                    </p>
-                    <div class="clients-txt-agile">
-                      <h4 class="mt-3">Sam Will</h4>
-                    </div>
-                    <div class="img-position mt-3">
-                      <img src="images/c1.jpg" alt="" class="img-fluid">
-                    </div >
-                  </div>
-                </div>
-                <div class="col-lg-6 col-md-6 w3layouts-txt-says">
-                  <div class="clients-color-agile text-center">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                    </p>
-                    <div class="clients-txt-agile">
-                      <h4 class="mt-3">Jack Son</h4>
-                    </div>
-                    <div class="img-position mt-3">
-                      <img src="images/c4.jpg" alt="" class="img-fluid">
-                    </div >
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="row client-slider-slide">
-                <div class="col-lg-6 col-md-6 w3layouts-txt-says">
-                  <div class="clients-color-agile text-center">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                    </p>
-                    <div class="clients-txt-agile">
-                      <h4 class="mt-3">Jilly Son</h4>
-                    </div>
-                    <div class="img-position mt-3">
-                      <img src="images/c3.jpg" alt="" class="img-fluid">
-                    </div >
-                  </div>
-                </div>
-                <div class="col-lg-6 col-md-6 w3layouts-txt-says">
-                  <div class="clients-color-agile text-center">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                    </p>
-                    <div class="clients-txt-agile">
-                      <h4 class="mt-3">Nike Deo</h4>
-                    </div>
-                    <div class="img-position mt-3">
-                      <img src="images/c2.jpg" alt="" class="img-fluid">
-                    </div >
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="row client-slider-slide">
-                <div class="col-lg-6 col-md-6 w3layouts-txt-says">
-                  <div class="clients-color-agile text-center">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                    </p>
-                    <div class="clients-txt-agile">
-                      <h4 class=" mt-3">Sam Will</h4>
-                    </div>
-                    <div class="img-position mt-3">
-                      <img src="images/c4.jpg" alt="" class="img-fluid">
-                    </div >
-                  </div>
-                </div>
-                <div class="col-lg-6 col-md-6 w3layouts-txt-says">
-                  <div class="clients-color-agile text-center">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                    </p>
-                    <div class="clients-txt-agile">
-                      <h4 class="mt-3">Jack Will</h4>
-                    </div>
-                    <div class="img-position mt-3">
-                      <img src="images/c2.jpg" alt="" class="img-fluid">
-                    </div >
-                  </div>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <!--<div class="custom-navigation">
-          <a href="#" class="flex-prev">Prev</a>
-          <div class="custom-controls-container"></div>
-          <a href="#" class="flex-next">Next</a>-->
-      </div>
-    </section>
+   
     <!--//clients-->
     <!-- team -->
     <section class="team  py-lg-4 py-md-3 py-sm-3 py-3" id="team">
@@ -466,14 +353,14 @@
     </section>
     <!-- //gallery -->
     <div class="address_mail_footer_grids" data-aos="fade-up">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.9503398796587!2d-73.9940307!3d40.719109700000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a27e2f24131%3A0x64ffc98d24069f02!2sCANADA!5e0!3m2!1sen!2sin!4v1441710758555"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13832.94458118011!2d30.87397831675405!3d-29.915103101486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef655280db8134b%3A0x61d5206c7be78571!2s12%20Tranquil%20St%2C%20Westcliff%2C%20Chatsworth%2C%204092!5e0!3m2!1sen!2sza!4v1696848017859!5m2!1sen!2sza"></iframe>
     </div>
     <!--contact -->
     <Section class="contact py-lg-4 py-md-3 py-sm-3 py-3" id="contact">
       <div class="container py-lg-5 py-md-5 py-sm-4 py-3">
         <h3 class="title text-center mb-lg-5 mb-md-4 mb-sm-4 mb-3">Contact Us</h3>
         <div class="mb-lg-5 mb-md-4 mb-3 row contact-right ">
-          <div class="col-lg-4 col-md-5 footer_grid_left text-center" data-aos="fade-right"
+          <div class="col-lg-4 col-md-5 footer_grid_left text-center"
             data-aos-offset="100"
             data-aos-easing="ease-in-sine">
             <div class="contact_footer_grid_left text-center mb-3">
@@ -481,7 +368,7 @@
             </div>
             <p> Broome St,10002,Canada<br>New York City 90210.</p>
           </div>
-          <div class="col-lg-4 col-md-3 footer_grid_left text-center"  data-aos="fade-right"
+          <div class="col-lg-4 col-md-3 footer_grid_left text-center"  
             data-aos-offset="110"
             data-aos-easing="ease-in-sine">
             <div class="contact_footer_grid_left text-center mb-3">
@@ -489,7 +376,7 @@
             </div>
             <p>+(000) 123 4565 32<br>+(010) 123 455 354</p>
           </div>
-          <div class="col-lg-4 col-md-4 footer_grid_left text-center" data-aos="fade-right"
+          <div class="col-lg-4 col-md-4 footer_grid_left text-center" 
             data-aos-offset="120"
             data-aos-easing="ease-in-sine">
             <div class="contact_footer_grid_left text-center mb-3">
@@ -500,7 +387,7 @@
             </p>
           </div>
         </div>
-        <div class=" contact-form aos-init aos-animate" data-aos="fade-left"
+        <div class=" contact-form aos-init aos-animate"
           data-aos-offset="100"
           data-aos-easing="ease-in-sine">
           <form action="#" method="post">
@@ -618,7 +505,7 @@
       </div>
       <div class="copy-agile-right text-center pt-lg-4 pt-3">
         <p> 
-          © 2018 Gym-Plus. All Rights Reserved | Design by <a href="http://www.W3Layouts.com" target="_blank">W3Layouts</a>
+          © 2018 Gym-Plus. All Rights Reserved | Design by <a href="S2000 CORP" target="_blank">W3Layouts</a>
         </p>
         <div class="icons-footer mt-lg-4 mt-md-3 mt-3">
           <ul>
