--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
       </div>
       <div class="copy-agile-right text-center pt-lg-4 pt-3">
         <p> 
-          © 2018 Gym-Plus. All Rights Reserved | Design by <a href="S2000 CORP" target="_blank">W3Layouts</a>
+          © 2023 Gym-Plus. All Rights Reserved | Design by S2000 CORP
         </p>
         <div class="icons-footer mt-lg-4 mt-md-3 mt-3">
           <ul>
