--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
     <title>Action Plus</title>
     <!--meta tags -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no,maximum-scale=1">
     <meta name="keywords" content="Gym-plus Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
       Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
     <script>
@@ -206,7 +207,7 @@
     <!-- team -->
     <section class="team  py-lg-4 py-md-3 py-sm-3 py-3" id="team">
       <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
-        <h3 class="title text-center clr mb-lg-5 mb-md-4 mb-sm-4 mb-3">Our Traines</h3>
+        <h3 class="title text-center clr mb-lg-5 mb-md-4 mb-sm-4 mb-3">Our Trainers</h3>
         <div class="row text-center ">
           <div class="col-lg-3 col-md-6 col-sm-6 news-img" data-aos="fade-up"
             data-aos-duration="3000">
