Show case Update

--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
     <title>Action Plus</title>
     <!--meta tags -->
     <meta charset="UTF-8">
-    <meta name="keywords" content="Gym-plus Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-      Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+    <meta name="keywords" content="Gym-plus" />
     <script>
       addEventListener("load", function () {
       	setTimeout(hideURLbar, 0);
@@ -37,14 +34,14 @@
     <link href="//fonts.googleapis.com/css?family=Oswald:400,500,600" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
   </head>
-  <body>
+  <body style="overflow-x: hidden;">
     <div class="header-outs" id="header">
       <div class="header-w3layouts">
         <div class="container-fluid">
           <!--//navigation section -->
           <nav class="navbar navbar-expand-lg navbar-light">
             <div class="hedder-up " >
-              <h1><a class="navbar-brand" href="index.html" data-aos="fade-right">Action-Plus</a></h1>
+              <h1><a class="navbar-brand" href="index.html" data-aos="fade-right">Action Plus Fitness</a></h1>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -62,9 +59,6 @@
                 </li>
                 <li class="nav-item">
                   <a href="#gallery" class="nav-link scroll">Gallery</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#client" class="nav-link scroll">Clients</a>
                 </li>
                 <li class="nav-item">
                   <a href="#contact" class="nav-link scroll">Contact</a>
@@ -97,7 +91,7 @@
                 <li>
                   <div class="slider-img">
                     <div class="slider-info ">
-                      <h4>Fitness And Stronger </h4>
+                      <h4>Fitness And Health </h4>
                       <h5>Real Athletes</h5>
                       <div class="mt-3 outs_more-buttn">
                         <a href="#" data-toggle="modal" data-target="#exampleModalLive">Read More</a>
@@ -108,7 +102,7 @@
                 <li>
                   <div class="slider-img">
                     <div class="slider-info">
-                      <h4>Fitness And Health</h4>
+                      <h4>Strength And Determination</h4>
                       <h5>With Double Power</h5>
                       <div class="mt-3 outs_more-buttn">
                         <a href="#" data-toggle="modal" data-target="#exampleModalLive">Read More</a>
@@ -133,10 +127,10 @@
           <div class="col-lg-7 jst-about py-lg-5 pt-md-5 pt-sm-4 pt-3" data-aos="fade-right">
             <h2 class="mb-lg-5 mb-lg-4 mb-3">Fitness And Health</h2>
             <div class="agile-about-para">
-              <p>Add Your Text Of Choice</p>
+              <p>The gym provides a structured and controlled environment for individuals to engage in a variety of fitness activities, helping them build strength, endurance, and overall physical fitness. Regular gym workouts contribute to improved cardiovascular health, muscle tone, and weight management, reducing the risk of chronic diseases.</p>
             </div>
             <div class="mt-lg-3 mt-2 agile-about-para">
-              <p>Add Your Text Of Choice</p>
+              <p>Additionally, the gym fosters a sense of discipline and commitment to one's health, promoting a healthier lifestyle beyond the workout space.</p>
             </div>
           </div>
           <div class="col-lg-5 about-States-list" data-aos="fade-left">
@@ -154,11 +148,8 @@
           <div class="col-lg-8 col-md-8 service-agile-info-left"  data-aos="fade-right"
             data-aos-offset="250"
             data-aos-easing="ease-in-sine">
-            <h4 class="mb-lg-4 mb-3"> Body Builder Classes</h4>
-            <p>Add Your Text Of Choice</p>
-            <div class="mt-3 outs_more-buttn">
-              <a href="#" data-toggle="modal" data-target="#exampleModalLive">Read More</a>
-            </div>
+            <h4 class="mb-lg-4 mb-3">Fitness Equipment</h4>
+            <p>We offer a wide range of exercise equipment, including cardio machines and strength training machines, free weights and functional training equipment. Access to a pool , soccer court , squash courts , volleyball court and a tennis court to our valued memebers.</p>
           </div>
           <div class="col-lg-4 col-md-4 ser-icon text-center">
             <div class="service-icon-w3layouts">
@@ -175,22 +166,16 @@
           <div class="col-lg-8 col-md-8 service-agile-info-left" data-aos="fade-left"
             data-aos-offset="200"
             data-aos-easing="ease-in-sine">
-            <h4 class="mb-lg-4 mb-3">Weight Loss Classes</h4>
-            <p>Add Your Text Of Choice</p>
-            <div class="mt-3 outs_more-buttn">
-              <a href="#" data-toggle="modal" data-target="#exampleModalLive">Read More</a>
-            </div>
+            <h4 class="mb-lg-4 mb-3">Group Fitness Classes</h4>
+            <p>We organize group fitness classes such as martial arts, yoga, spinning, Zumba, HIIT, aerobics, dance fitness, and circuit training all led by certified instructors</p>
           </div>
         </div>
         <div class="row bottom-service pt-lg-4 pt-md-3 pt-2" >
           <div class="col-lg-8 col-md-8 service-agile-info-left" data-aos="fade-right"
             data-aos-offset="150"
             data-aos-easing="ease-in-sine">
-            <h4 class="mb-lg-4 mb-3">Indoor Cycling Classes</h4>
-            <p>Add Your Text Of Choice</p>
-            <div class="mt-3 outs_more-buttn">
-              <a href="#" data-toggle="modal" data-target="#exampleModalLive">Read More</a>
-            </div>
+            <h4 class="mb-lg-4 mb-3">Personal Training</h4>
+            <p>Available for one-on-one or small group training sessions. Personal trainers can create customized workout plans and provide guidance on proper exercise techniques</p>
           </div>
           <div class="col-lg-4 col-md-4 ser-icon text-center">
             <div class="service-icon-w3layouts">
@@ -216,15 +201,9 @@
               <h4 class="mt-3 mb-2">Sam Will 
               </h4>
               <span class="wls-client-title">Body Builder</span>
-              <p class="mt-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                Lorem ipsum 
+              <p class="mt-3">This is an Example trainer(Add Text here to describe the trainers experience, qualifications or a brief description)
               </p>
               <div class="icons-footer mt-lg-4 mt-md-3 mt-3">
-                <ul>
-                  <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
-                  <li><a href="#"><span class="fas fa-envelope"></span></a></li>
-                  <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-                </ul>
               </div>
             </div>
           </div>
@@ -235,15 +214,9 @@
               <h4 class="mt-3 mb-2">Sara kent 
               </h4>
               <span class="wls-client-title">Fitness Trainer</span>
-              <p class="mt-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                Lorem ipsum 
+              <p class="mt-3">This is an Example trainer(Add Text here to describe the trainers experience, qualifications or a brief description)
               </p>
               <div class="icons-footer mt-lg-4 mt-md-3 mt-3">
-                <ul>
-                  <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
-                  <li><a href="#"><span class="fas fa-envelope"></span></a></li>
-                  <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-                </ul>
               </div>
             </div>
           </div>
@@ -254,15 +227,9 @@
               <h4 class="mt-3 mb-2">Rose Will 
               </h4>
               <span class="wls-client-title">Weight Trainer</span>
-              <p class="mt-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                Lorem ipsum 
+              <p class="mt-3">This is an Example trainer(Add Text here to describe the trainers experience, qualifications or a brief description)
               </p>
               <div class="icons-footer mt-lg-4 mt-md-3 mt-3">
-                <ul>
-                  <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
-                  <li><a href="#"><span class="fas fa-envelope"></span></a></li>
-                  <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-                </ul>
               </div>
             </div>
           </div>
@@ -273,15 +240,9 @@
               <h4 class="mt-3 mb-2">Max Will 
               </h4>
               <span class="wls-client-title">Body Builder</span>
-              <p class="mt-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                Lorem ipsum 
+              <p class="mt-3">This is an Example trainer(Add Text here to describe the trainers experience, qualifications or a brief description)
               </p>
               <div class="icons-footer mt-lg-4 mt-md-3 mt-3">
-                <ul>
-                  <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
-                  <li><a href="#"><span class="fas fa-envelope"></span></a></li>
-                  <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-                </ul>
               </div>
             </div>
           </div>
@@ -293,18 +254,19 @@
     <section class="gallery py-lg-4 py-md-3 py-sm-3 py-3" id="gallery">
       <div class="container py-lg-5 py-md-5 py-sm-4 py-3">
         <h3 class="title text-center mb-lg-5 mb-md-4 mb-sm-4 mb-3">Our Gallery</h3>
+        <p>Click Image For A Description</p>
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-4 p-0 snap-img" >
             <div class=" agileits_w3layouts_gallery_grid1" data-aos="zoom-in-up">
               <div class="w3_agile_gallery_effect">
-                <a href="images/g1.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+                <a href="images/g1.jpg" data-lightbox="example-set" data-title="Add Some Text Here to Describe the image">
                 <img src="images/g1.jpg" alt=" " class="img-fluid">
                 </a>
               </div>
             </div>
             <div class="agileits_w3layouts_gallery_grid1" data-aos="zoom-in-up">
               <div class="w3_agile_gallery_effect">
-                <a href="images/g2.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+                <a href="images/g2.jpg" data-lightbox="example-set" data-title="Add Some Text Here to Describe the image">
                 <img src="images/g2.jpg" alt=" " class="img-fluid"> 
                 </a>
               </div>
@@ -313,14 +275,14 @@
           <div class="col-lg-4 col-md-4 col-sm-4 p-0 snap-img">
             <div class=" agileits_w3layouts_gallery_grid1" data-aos="zoom-in-up">
               <div class="w3_agile_gallery_effect">
-                <a href="images/g3.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+                <a href="images/g3.jpg" data-lightbox="example-set" data-title="Add Some Text Here to Describe the image">
                 <img src="images/g3.jpg" alt=" " class="img-fluid">
                 </a>
               </div>
             </div>
             <div class="agileits_w3layouts_gallery_grid1" data-aos="zoom-in-up">
               <div class="w3_agile_gallery_effect">
-                <a href="images/g6.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+                <a href="images/g6.jpg" data-lightbox="example-set" data-title="Add Some Text Here to Describe the image">
                 <img src="images/g6.jpg" alt=" " class="img-fluid">
                 </a>
               </div>
@@ -329,21 +291,21 @@
           <div class="col-lg-4 col-md-4 col-sm-4 p-0 snap-img">
             <div class="agileits_w3layouts_gallery_grid1 " data-aos="zoom-in-up">
               <div class="w3_agile_gallery_effect">
-                <a href="images/g4.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+                <a href="images/g4.jpg" data-lightbox="example-set" data-title="Add Some Text Here to Describe the image">
                 <img src="images/g4.jpg" alt=" " class="img-fluid">
                 </a>
               </div>
             </div>
             <div class="agileits_w3layouts_gallery_grid1 " data-aos="zoom-in-up">
               <div class="w3_agile_gallery_effect">
-                <a href="images/g2.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+                <a href="images/g2.jpg" data-lightbox="example-set" data-title="Add Some Text Here to Describe the image">
                 <img src="images/g2.jpg" alt=" " class="img-fluid">
                 </a>
               </div>
             </div>
             <div class="agileits_w3layouts_gallery_grid1" data-aos="zoom-in-up">
               <div class="w3_agile_gallery_effect">
-                <a href="images/g3.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+                <a href="images/g3.jpg" data-lightbox="example-set" data-title="Add Some Text Here to Describe the image">
                 <img src="images/g3.jpg" alt=" " class="img-fluid">
                 </a>
               </div>
@@ -367,7 +329,7 @@
             <div class="contact_footer_grid_left text-center mb-3">
               <span class="fas fa-map-marker-alt"></span>
             </div>
-            <p> Broome St,10002,Canada<br>New York City 90210.</p>
+            <p> 12 Tranquil Street,<br>Chatsworth main 4092.</p>
           </div>
           <div class="col-lg-4 col-md-3 footer_grid_left text-center"  
             data-aos-offset="110"
@@ -375,7 +337,7 @@
             <div class="contact_footer_grid_left text-center mb-3">
               <span class="fas fa-phone-volume"></span>
             </div>
-            <p>+(000) 123 4565 32<br>+(010) 123 455 354</p>
+            <p>031 401 2226</p>
           </div>
           <div class="col-lg-4 col-md-4 footer_grid_left text-center" 
             data-aos-offset="120"
@@ -383,14 +345,15 @@
             <div class="contact_footer_grid_left text-center mb-3">
               <span class="fas fa-at"></span>
             </div>
-            <p><a href="mailto:info@example.com">info@example1.com</a> 
-              <br><a href="mailto:info@example.com">info@example2.com</a>
+            <p><a href="mailto:info@example.com">info@actionplus.co.za</a> 
+              
             </p>
           </div>
         </div>
         <div class=" contact-form aos-init aos-animate"
           data-aos-offset="100"
           data-aos-easing="ease-in-sine">
+          <!--
           <form action="#" method="post">
             <div class="row text-center contact-wls-detail">
               <div class="col-md-4 form-group contact-forms">
@@ -407,7 +370,7 @@
               <textarea class="form-control" rows="3" placeholder="Your Message" required=""></textarea>
             </div>
             <button type="submit" class="btn sent-butnn">Send</button>
-          </form>
+          </form>-->
         </div>
       </div>
     </section>
@@ -420,9 +383,6 @@
             <h4 class="pb-md-4 pb-3">Nav Links</h4>
             <nav class="border-line">
               <ul class="nav flex-column">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
                   <a href="#about" class="nav-link scroll">About</a>
                 </li>
@@ -506,15 +466,9 @@
       </div>
       <div class="copy-agile-right text-center pt-lg-4 pt-3">
         <p> 
-          © 2023 Gym-Plus. All Rights Reserved | Design by S2000 CORP
+          © 2023. All Rights Reserved | Design by S2000 CORP
         </p>
         <div class="icons-footer mt-lg-4 mt-md-3 mt-3">
-          <ul>
-            <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
-            <li><a href="#"><span class="fas fa-envelope"></span></a></li>
-            <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-            <li><a href="#"><span class="fab fa-pinterest-p"></span></a></li>
-          </ul>
         </div>
       </div>
     </footer>
@@ -524,20 +478,18 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="exampleModalLiveLabel">Gym-Plus</h4>
+            <h4 class="modal-title" id="exampleModalLiveLabel">Action Plus</h4>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
             <img src="images/b1.jpg" alt="" class="img-fluid">
-            <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
-              eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellu
+            <p> Going to the gym provides an opportunity to improve physical health, mental well-being, and overall quality of life through structured exercise and fitness routines.
             </p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
       </div>
